<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView

            style="@style/sectionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#C5CAE9"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:outlineAmbientShadowColor="#757575"
            android:paddingHorizontal="15dp"
            android:text="Login Page"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="Email"
                    android:fontFamily="sans-serif"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="Username"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"  />

                <TextView
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="Password"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    />

                <EditText
                    android:id="@+id/userTextName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"/>

                <EditText
                    android:id="@+id/userTextPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:ems="10" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="logInClick"
            android:text="Log In"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/errorMessageLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center" />

    </LinearLayout>
</LinearLayout>