<resources>
    <string name="app_name">NoteApp</string>
    <string name="navBar_appName">Stick-Pad</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="toolbar_appMessage">Take Your Notes Efficiently</string>
    <string name="title_activity_note">NoteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="title_activity_add_notes">AddNotes</string>

    <!--Add note strings-->
    <string name="addNote_title">Write your title here</string>
    <string name="addNote_details">Write your note here</string>

    <!--Profile activity strings-->
    <string name="profile">Profile page</string>
    <string name="title_activity_profile1">ProfileActivity1</string>
    <string name="line_height_out_of_range">Height range between 1.0 and 4.0</string>
    <string name="letter_spacing_out_of_range">Spacing range between 0.0 and 1.0</string>

    <!--Account Strings -->
    <string name="email_taken">Email is taken</string>
    <string name="username_taken">Username is taken</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="invalid_email">Incorrect Email Format</string>
    <string name="password_not_same">Password are not the same</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>